# AnyVali

./: .dockerignore  .editorconfig  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SPEC.md  README.md  VERSION  codecov.yml  llms.txt  mkdocs.yml  runner.sh  site.Dockerfile
sdk/cpp/: CHANGELOG.md  CMakeLists.txt
sdk/cpp/include/anyvali/: anyvali.hpp  anyvali_document.hpp  issue_codes.hpp  parse_result.hpp  schema.hpp  typed_parse.hpp  types.hpp  validation_context.hpp  validation_error.hpp  validation_issue.hpp
sdk/cpp/include/anyvali/format/: validators.hpp
sdk/cpp/include/anyvali/interchange/: exporter.hpp  importer.hpp
sdk/cpp/include/anyvali/parse/: coercion.hpp  coercion_config.hpp  defaults.hpp
sdk/cpp/include/anyvali/schemas/: any_schema.hpp  array_schema.hpp  bool_schema.hpp  enum_schema.hpp  int_schema.hpp  intersection_schema.hpp  literal_schema.hpp  never_schema.hpp  null_schema.hpp  nullable_schema.hpp  number_schema.hpp  object_schema.hpp  optional_schema.hpp  record_schema.hpp  ref_schema.hpp  string_schema.hpp  tuple_schema.hpp  union_schema.hpp  unknown_schema.hpp
sdk/cpp/sdk/cpp/: CHANGELOG.md
sdk/cpp/src/: anyvali.cpp
sdk/cpp/tests/: main.cpp  test_coercion.cpp  test_conformance.cpp  test_defaults.cpp  test_format.cpp  test_framework.hpp  test_interchange.cpp  test_schemas.cpp  test_security.cpp
sdk/python/: .coverage  CHANGELOG.md  package-lock.json  pyproject.toml
sdk/python/sdk/python/: CHANGELOG.md
sdk/python/src/anyvali/: __init__.py  issue_codes.py  types.py
sdk/python/src/anyvali/format/: __init__.py  validators.py
sdk/python/src/anyvali/interchange/: __init__.py  document.py  exporter.py  importer.py
sdk/python/src/anyvali/parse/: __init__.py  coerce.py  defaults.py  parser.py
sdk/python/src/anyvali/schemas/: __init__.py  any.py  array.py  base.py  bool.py  enum.py  integer.py  (+14 more)
sdk/python/tests/: conftest.py
sdk/python/tests/conformance/: runner.py  test_conformance.py
sdk/python/tests/unit/: test_coerce_edge.py  test_coercions.py  test_composites.py  test_defaults.py  test_errors.py  test_export.py  test_formats.py  test_interchange.py  test_parser.py  test_pattern_redos.py  test_primitives.py  test_schemas_edge.py  test_security.py  test_shared_ref.py
sdk/rust/: CHANGELOG.md  Cargo.toml
sdk/rust/sdk/rust/: CHANGELOG.md
sdk/rust/src/: issue_codes.rs  lib.rs  schema.rs  typed.rs  types.rs
sdk/rust/src/format/: validators.rs
sdk/rust/src/interchange/: exporter.rs  importer.rs
sdk/rust/src/parse/: coerce.rs  defaults.rs  mod.rs
sdk/rust/src/schemas/: any.rs  array.rs  bool.rs  enum_schema.rs  int.rs  intersection.rs  literal.rs  mod.rs  never.rs  null.rs  nullable.rs  number.rs  object.rs  optional.rs  record.rs  ref_schema.rs  string.rs  tuple.rs  union.rs  unknown.rs
sdk/rust/tests/: coercion_tests.rs  conformance_tests.rs  defaults_tests.rs  format_tests.rs  interchange_tests.rs  schema_tests.rs  security_tests.rs
(+461 files in other folders)
