[package]
name = "anyvali"
version = "0.0.1"
edition = "2021"
description = "Native validation with portable schema interchange"
homepage = "https://anyvali.com"
repository = "https://github.com/anyvali/anyvali"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
