[package]
name = "anyvali"
version = "0.2.0"
edition = "2021"
description = "Native validation with portable schema interchange"
readme = "README.md"
homepage = "https://anyvali.com"
repository = "https://github.com/BetterCorp/AnyVali"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
regex = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
